@@ -44,6 +44,8 @@
  * 03-Oct-2006 : Fixed NullPointerException in equals(), fire change event in 
  *               add() method, updated API docs (DG);
  * 21-Jun-2007 : Removed JCommon dependencies (DG);
+ * 29-Jun-2007 : Changed first parameter in constructors from String to 
+ *               Comparable (DG);
  *
  */
 
@@ -109,7 +111,7 @@ public class TimePeriodValues extends Series implements Serializable {
      *
      * @param name  the name of the series (<code>null</code> not permitted).
      */
-    public TimePeriodValues(String name) {
+    public TimePeriodValues(Comparable name) {
         this(name, DEFAULT_DOMAIN_DESCRIPTION, DEFAULT_RANGE_DESCRIPTION);
     }
 
@@ -124,7 +126,7 @@ public class TimePeriodValues extends Series implements Serializable {
      * @param domain  the domain description.
      * @param range  the range description.
      */
-    public TimePeriodValues(String name, String domain, String range) {
+    public TimePeriodValues(Comparable name, String domain, String range) {
         super(name);
         this.domain = domain;
         this.range = range;
