@@ -1,5 +1,17 @@
 2007-06-29  David Gilbert  <david.gilbert@object-refinery.com>
 
+	* source/org/jfree/data/time/TimePeriodValues.java
+	(TimePeriodValues(String)): Changed parameter to Comparable,
+	(TimePeriodValues(String, String, String)): Changed first parameter to
+	Comparable,
+	* source/org/jfree/data/time/TimeSeries.java
+	(TimeSeries(String)): Changed parameter to Comparable,
+	(TimeSeries(String, String, String)): Changed first parameter to 
+	Comparable,
+	(TimeSeries(String, String, String, Class)): Likewise.
+
+2007-06-29  David Gilbert  <david.gilbert@object-refinery.com>
+
 	* source/org/jfree/chart/renderer/category/AbstractCategoryItemRenderer.java
 	(getItemURLGenerator): Renamed getURLGenerator(),
 	(addItemEntity): Updated for renamed method,
